# OOP_indie_studio_2019

./: .gitignore  CMakeLists.txt  README.md  nano.save
cmake/Modules/irrLicht/include/: ISceneManager.h
includes/: Input.hpp
includes/bomb/: AnimExplo.hpp  Bomb.hpp  BombException.hpp  BombStack.hpp  Bomber.hpp
includes/characters/: Character.hpp  CharacterException.hpp  modelInfos.hpp  side.hpp
includes/core/: Core.hpp  CoreException.hpp  global.hpp
includes/game/: AI.hpp  Ai.hpp  Game.hpp  GameCore.hpp  GameCoreException.hpp  IEntity.hpp  Player.hpp  hitbox.hpp
includes/input/: Input.hpp  MyEventReceiver.hpp
includes/intro/: Intro.hpp
includes/map/: LoadMap.hpp  Map.hpp  MapException.hpp
includes/menu/: Credits.hpp  Enum.hpp  Game.hpp  GameOptions.hpp  GameStat.hpp  Help.hpp  IGame.hpp  IMenu.hpp  Intro.hpp  Load.hpp  LoadingException.hpp  Menu.hpp  MenuException.hpp  MyEventReceiver.hpp  Options.hpp  Pause.hpp  ProgressBar.hpp  Save.hpp  Score.hpp  Select.hpp  Splash.hpp
includes/menu/gameOptions/: GameControls.hpp
includes/menu/inGameMenu/: Game.hpp  Pause.hpp  Score.hpp
includes/menu/inGameMenu/gameOptions/: GameSounds.hpp
includes/menu/mainMenu/: Help.hpp  Intro.hpp  Menu.hpp  Score.hpp  Select.hpp
includes/menu/mainMenu/options/: Controls.hpp  GameSettings.hpp
includes/menu/options/: Controls.hpp  Sounds.hpp  Videos.hpp
includes/menu/splashScreen/: ProgressBar.hpp  Splash.hpp
includes/music/: Enum.hpp  Music.hpp  MusicException.hpp
includes/powerUps/: Bomb.hpp  BombDown.hpp  BombFull.hpp  BombPass.hpp  BombUp.hpp  Fire.hpp  FireDown.hpp  FireFull.hpp  FireUp.hpp  IBonus.hpp  IPowerUps.hpp  PowerUpsException.hpp  Speed.hpp  SpeedDown.hpp  SpeedUp.hpp  WallPass.hpp
includes/saveAndLoad/: EnumCheck.hpp  saveAndLoad.hpp  saveAndLoadException.hpp
includes/splash/: loadCore.hpp
includes/travel/: ACameraTravel.hpp  CameraTravelException.hpp  CameraTravelManager.hpp  CircleCameraTravel.hpp  StraightCameraTravel.hpp
includes/traveling/: ACameraTraveling.hpp  CircleCameraTraveling.hpp
resources/models/blocks/: solid.mtl
resources/models/bomb/: bomb.mtl
resources/models/castle/exterior/: FirstMiddleViewA.mtl
resources/models/castle/interior/: Peach's Castle Interior.FBX
resources/models/characters/Impa/: Impa_run.MD3
resources/models/characters/crash/: Crash_idle.MD3  Crash_run.MD3  Crash_taunt.MD3
resources/models/characters/deadpool/: Deadpool_run.MD3
resources/models/characters/ironman/: Iron-man_idle.MD3  Iron-man_run.MD3
resources/models/characters/littlemac/: Little-mac_idle.MD3  Little-mac_run.MD3  Little-mac_taunt.MD3
resources/models/characters/luigi/: luigi.md3
resources/models/characters/mario/: mario.md3
resources/models/characters/mickey/: Mickey_idle.MD3  Mickey_run.MD3  Mickey_taunt.MD3
resources/models/objects/: Bomb.MD3  box.MD3  mur.MD3  sol.MD3
resources/models/planets/goal_planet/: Common.mtl
resources/models/planets/lakitu_planet/: BossJugemPlanet.mtl
resources/models/planets/observatory/: observatory.mtl  plateA.mtl  plateB.mtl
resources/models/powers/bombs/: bombPass.mtl
resources/models/powers/fires/: fireDown.mtl  fireFull.mtl
resources/models/powers/speeds/: speedDown.mtl  speedUp.mtl
ressources/models/characters/dryBones/: dryBones.mtl  dryBones.x
ressources/models/characters/koopa/: koopa.mtl
ressources/models/characters/lakitu/: lakitu.mtl
ressources/models/characters/luigi/: luigi.mtl
ressources/models/characters/mario/: mario.mtl
ressources/models/characters/shyGuy/: shyGuyBlack.mtl  shyGuyBlue.mtl  shyGuyRed.mtl  shyGuyWhite.mtl
ressources/models/characters/yoshi/: yoshi.mtl
ressources/models/explosion/: explode.mtl
sources/: Input.cpp  main.cpp
sources/ai/: Ai.cpp
sources/ai/tests/include/: AI.hpp  Game.hpp  define.hpp  graphicFunctions.hpp  maps.hpp  movement.hpp  powerUp.hpp
sources/ai/tests/src/: .gitignore  AI.cpp  Game.cpp  drawGame.cpp  inputsGame.cpp  loopGame.cpp  main.cpp  maps.cpp
sources/bomb/: AnimExplo.cpp  Bomb.cpp  BombStack.cpp  Bomber.cpp
sources/characters/: Character.cpp
sources/core/: Core.cpp  global.cpp
sources/game/: AI.cpp  GameCore.cpp  Player.cpp  hitbox.cpp
sources/input/: Input.cpp  MyEventReceiver.cpp
sources/intro/: Intro.cpp
sources/map/: LoadMap.cpp  Map.cpp
sources/menu/: Credits.cpp  Game.cpp  GameOptions.cpp  Help.cpp  Intro.cpp  Load.cpp  Menu.cpp  MyEventReceiver.cpp  Options.cpp  Pause.cpp  ProgressBar.cpp  Save.cpp  Score.cpp  Select.cpp  Splash.cpp
sources/menu/gameOptions/: GameControls.cpp
sources/menu/inGameMenu/: Game.cpp  Pause.cpp  Save.cpp
sources/menu/inGameMenu/gameOptions/: GameControls.cpp  GameSounds.cpp
sources/menu/mainMenu/: Credits.cpp  Help.cpp  Load.cpp  Menu.cpp  Score.cpp  Select.cpp
sources/menu/mainMenu/options/: Controls.cpp  GameSettings.cpp  Sounds.cpp
sources/menu/options/: Controls.cpp  Sounds.cpp  Videos.cpp
sources/menu/splashScreen/: Splash.cpp  loadCore.cpp
sources/music/: Music.cpp
sources/powerUps/: Bomb.cpp  BombDown.cpp  BombFull.cpp  BombPass.cpp  BombUp.cpp  Fire.cpp  FireDown.cpp  FireFull.cpp  FireUp.cpp  Speed.cpp  SpeedDown.cpp  SpeedUp.cpp  WallPass.cpp
sources/saveAndLoad/: saveAndLoad.cpp
sources/splash/: loadCore.cpp
sources/travel/: CameraTravelManager.cpp  CircleCameraTravel.cpp  StraightCameraTravel.cpp
sources/traveling/: CircleCameraTraveling.cpp
